--- a/APPD/Views/HomeDisplayListView.xaml
+++ b/APPD/Views/HomeDisplayListView.xaml
@@ -49,15 +49,21 @@
                                         Margin="0 10 0 0"
                                         HorizontalAlignment="Left"
                                         VerticalAlignment="Top">
-                                <Label Content="{Binding Name}"
-                                       FontFamily="Impact"
-                                       Margin="30 10"
-                                       FontSize="26"
+                                <TextBox Text="{Binding Name, Mode=OneWay, UpdateSourceTrigger=PropertyChanged}"
+                                         FontFamily="Impact" 
+                                         Margin="30 10"
+                                         FontSize="26"
+                                         Background="{x:Null}"
+                                         BorderThickness="0"
+                                         TextWrapping="Wrap"
                                        />
-                                <Label Content="{Binding Description}"
-                                       FontFamily="Segoe UI Light"
-                                       Margin="30 1 0 10"
-                                       FontSize="15"
+                                <TextBox Text="{Binding Description, Mode=OneWay, UpdateSourceTrigger=PropertyChanged}"
+                                         FontFamily="Segoe UI Light"
+                                         Margin="30 1 0 10"
+                                         FontSize="15"
+                                         Background="{x:Null}"
+                                         BorderThickness="0"
+                                         TextWrapping="Wrap"
                                        />
                                 <WrapPanel Orientation="Horizontal"
                                            Margin="20 0 0 0"
